# pwpush-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SUPPORT.md  UPGRADING.md  compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pypi.yml  release.yml
catalog/: metadata.json  readme.md  server.yaml
scripts/: gen_metadata.py
src/pwpush_mcp/: __init__.py  __main__.py  audit.py  client.py  config.py  durations.py  server.py
tests/: test_audit.py  test_catalog_metadata.py  test_client.py  test_config.py  test_durations.py  test_main.py  test_packaging.py  test_reliability.py  test_server.py
