[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pwpush-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for Password Pusher (pwpush)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "password-pusher", "pwpush", "secrets", "llm"]
authors = [{ name = "pwpush-mcp contributors" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=3.4,<4",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
pwpush-mcp = "pwpush_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/your-org/pwpush-mcp"
Issues = "https://github.com/your-org/pwpush-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pwpush_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
