[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pwpush-mcp"
version = "0.2.0"
description = "Model Context Protocol (MCP) server for Password Pusher (pwpush)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "password-pusher", "pwpush", "secrets", "llm"]
authors = [{ name = "Franck SALLET" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "mcp[cli]>=1.2.0,<2.0",  # MCP SDK breaks at every minor; cap at major boundary
    "httpx>=0.27,<1.0",       # httpx 0.28 had transport API breaks; cap before 1.0
    "uvicorn>=0.30",           # HTTP transport (--listen); low-risk transitive dep
    "starlette>=0.37",         # HTTP transport (--listen)
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "respx>=0.21",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4",
]

[project.scripts]
pwpush-mcp = "pwpush_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/k9fr4n/pwpush-mcp"
Issues = "https://github.com/k9fr4n/pwpush-mcp/issues"
Changelog = "https://github.com/k9fr4n/pwpush-mcp/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/pwpush_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["pwpush_mcp", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/pwpush_mcp"]
branch = true

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true

[tool.mypy]
python_version = "3.10"
files = ["src/pwpush_mcp"]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
